--- a/1-frontpage/index.html
+++ b/1-frontpage/index.html
@@ -146,5 +146,12 @@
   });
 </script>
 
+<!-- Footer with Start Dating Button -->
+<div class="footer">
+  <p>Ready to connect?</p>
+  <button class="start-dating-btn">Start Dating</button>
+</div>
+
+
 </body>
 </html>
